# SerWave

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/: icon.icns
crates/serwave-app/: Cargo.toml  build.rs
crates/serwave-app/src/: main.rs  ui.slint
crates/serwave-core/: Cargo.toml
crates/serwave-core/src/: encoding.rs  lib.rs  logbuf.rs  serial_service.rs
crates/serwave-decode/: Cargo.toml
crates/serwave-decode/src/: i2c.rs  lib.rs  spi.rs  uart.rs
