
[package]
name = "serwave-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A lightweight serial port debugger with protocol decoding"

[dependencies]
slint = { version = "1", features = ["backend-winit", "renderer-femtovg"] }
serwave-core = { path = "../serwave-core" }
serwave-decode = { path = "../serwave-decode" }
anyhow = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[build-dependencies]
slint-build = "1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.packager]
product_name = "SerWave"
identifier = "com.serwave.app"
category = "Utility"
icons = ["../../assets/icon.png"]
resources = []

[package.metadata.packager.macos]
frameworks = []
minimum_system_version = "11.0"

[package.metadata.packager.windows]
allow_downgrades = true

[package.metadata.packager.linux]
generate-desktop-entry = true
