
[package]
name = "serwave-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serialport = "4"
thiserror = "1"
log = "0.4"
parking_lot = "0.12"
crossbeam-channel = "0.5"
encoding_rs = "0.8"
chardetng = "0.1"
